弾を発射した際のベクトル取得

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>スリングショットゲーム</title>
   </head>
   <body>
-    <script type="module" src="slingshot.js"></script>
+    <script type="module" src="./src/slingshot.js"></script>
   </body>
 </html>
 
