ルーム接続処理のイベントハンドラー導入

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>スリングショットゲーム</title>
   </head>
   <body>
+    <input type="number" id="connectID" />
+    <br />
+    <button id="createRoomID">部屋を作る</button>
+    <button id="joinRoomID">参加する</button>
     <script type="module" src="./src/slingshot.js"></script>
   </body>
 </html>
