ownerのみがゲームスタートを実行できるように

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <br />
     <button id="createRoomID">部屋を作る</button>
     <button id="joinRoomID">参加する</button>
+    <br />
+    <button id="gameStartID" style="display: none">ゲームスタート</button>
     <script type="module" src="./src/slingshot.js"></script>
   </body>
 </html>
