いろいろやったショット同期

--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <title>スリングショットゲーム</title>
   </head>
   <body>
-    <input type="number" id="connectID" />
-    <br />
-    <button id="createRoomID">部屋を作る</button>
-    <button id="joinRoomID">参加する</button>
-    <br />
-    <button id="gameStartID" style="display: none">ゲームスタート</button>
+    <div id="initMenuID">
+      <input type="text" id="connectID" />
+      <button id="createRoomID">部屋を作る</button>
+      <button id="joinRoomID">参加する</button>
+      <br />
+      <button id="gameStartID">ゲームスタート</button>
+    </div>
+
     <script type="module" src="./src/slingshot.js"></script>
   </body>
 </html>
