ルームIDの描画

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       <button id="gameStartID">ゲームスタート</button>
     </div>
 
+    <div></div>
+    <p id="testID"></p>
+
     <div id="myCanvas"></div>
 
     <script type="module" src="./src/slingshot.js"></script>
